--- a/src/components/About.css
+++ b/src/components/About.css
@@ -11,15 +11,15 @@ h1 {
     text-align: center;
     color: black;
     background-color: white;
-    margin-bottom: 0;
-    opacity: 0.8;
+    margin-bottom: 0px;
+    opacity: 0.7;
 }
 
 p {
     text-align: center;
     color: black;
     background-color: white;
-    margin-top: 0;
-    opacity: 0.8;
+    margin-top: 0px;
+    opacity: 0.7;
 }
 
