--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -8,6 +8,7 @@
 
 form {
     background-color: gray;
+    
 }
 
 h2 {
@@ -17,5 +18,6 @@ div.card.card-body {
     background-color: gray;
     width: 500px;
     height: 400px;
+    opacity: 0.7;
 }
 
