--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,7 @@
 .navbar-brand {
     margin-left: 290px;
+    border: 2px solid rgb(41, 243, 41);
+    border-radius: 20%;
+    background-color: rgb(41, 243, 41);
+    font-family: 'DotGothic16', sans-serif;
 }
