navbar Home color edited

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,3 +5,11 @@
     background-color: rgb(41, 243, 41);
     font-family: 'DotGothic16', sans-serif;
 }
+
+.nav-link {
+    color: white;
+}
+
+.nav-link:hover {
+    color: aqua;
+}
