--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,4 +1,6 @@
-html {
+.blog {
     background-image: url('https://wallpapercave.com/wp/wp3660106.jpg');
     background-size: cover;
+    height: 100vh;
+    width: 100vw;
 }
