--- a/src/components/About.css
+++ b/src/components/About.css
@@ -18,8 +18,10 @@ h1 {
 p {
     text-align: center;
     color: black;
-    background-color: white;
     margin-top: 0px;
-    opacity: 0.7;
+    font-size: large;
 }
 
+#about {
+    border-radius: 15%;
+}
