swapped blog page and profile page

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -5,3 +5,18 @@ div.profile {
     height: 100vh;
     width: 100vw;
 }
+
+#blogtitle {
+    text-align: center;
+    font-size: x-large;
+}
+
+#blogcomments {
+    text-align: center;
+    font-size: x-large;
+}
+
+#profilebody {
+    height: 600px;
+}
+
