not sure what changes are

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -7,12 +7,11 @@ div.profile {
 }
 
 #blogtitle {
-    text-align: center;
     font-size: x-large;
+    text-align: right;
 }
 
 #blogcomments {
-    text-align: center;
     font-size: x-large;
 }
 
