--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,3 +1,7 @@
+h5 {
+    text-align: center;
+}
+
 .blog {
     background-image: url('https://wallpapercave.com/wp/wp3660106.jpg');
     background-size: cover;
@@ -5,7 +9,7 @@
     width: 100vw;
 }
 
-#title {
+#blogtitle {
     text-align: center;
 } 
 
@@ -13,4 +17,7 @@
     height: 600px;
 }
 
+#blogcontent {
+    text-align: center;
+}
 
